--- a/client/nav.jade
+++ b/client/nav.jade
@@ -66,7 +66,7 @@ template(name='nav')
                         i.large.grey.loading.circle.notch.icon
                 else
                     a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
-                        i.sign.out.large.grey.icon
+                        i.sign.out.grey.icon
             else
                 a.icon.item(href='/login' title='Login') 
                     i.sign.in.large.grey.icon
